Refreshed swagger gen'd code Fixed a few bugs
